--- a/Genetic_snake/Readme
+++ b/Genetic_snake/Readme
@@ -4,4 +4,4 @@ As a part of exploiting the possibilities of performing mathamatics required for
 
 It isn't omplete yet, but you can see that with little unfinished alogrithm it can do good job.
 
-[A sample pic from the project](/Genetic_snakes.jpg)
+[A sample pic from the project](Genetic_snakes.jpg)
